--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -19,15 +19,15 @@
                 <td class="headtd">
                     <div style="width: 900px;">
                         <div class="divstep" id="divXZDL">
-                            <span class="spanstep" id="spanXZDL">选择大类</span>
+                            <span class="spanstep" id="spanXZDL">1.选择大类</span>
                             <em class="emstep" id="emXZDL"></em>
                         </div>
                         <div class="divstep" id="divXZXL">
-                            <span class="spanstep" id="spanXZXL">选择小类</span>
+                            <span class="spanstep" id="spanXZXL">2.选择小类</span>
                             <em class="emstep" id="emXZXL"></em>
                         </div>
                         <div class="divstep" id="divFBXX">
-                            <span class="spanstep" id="spanFBXX">发布信息</span>
+                            <span class="spanstep" id="spanFBXX">3.发布信息</span>
                             <em class="emstep" id="emFBXX"></em>
                         </div>
                     </div>
@@ -37,35 +37,18 @@
     </div>
     <div id="myTabContent" style="margin-left: 18%;">
         <div id="divDL" class="divLB" style="display: block; ">
-            <div id="divDLText" class="DLText">选择大类</div>
+            <div id="divDLText" class="DLText">1.选择大类</div>
             <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
         </div>
         <div id="divFirst" style="display: block; width: 900px; padding-top: 50px;">
             <table id="tableDL" class="table" style="width: 900px;"></table>
         </div>
         <div id="divXL" class="divLB" style="display: none; ">
-            <div id="divXLText" class="DLText">选择小类</div>
+            <div id="divXLText" class="DLText">2.选择小类</div>
             <img style="width: 20px; height: 28px; float: left;" src="@Url.Content("~/Areas/Business/Css/images/righttip.png")"/>
         </div>
         <div id="divSecond" style="display: block; width: 900px; padding-top: 50px; ">
             <table id="tableXL" class="table" style="width: 900px;"></table>
-        </div>
-        <div id="divThird" style="display: none">
-            <table class="table" style="width: 900px;">
-                <tr>
-                    <td>
-                        <input type="password" id="MM" class="form-control input_text" placeholder="新密码">
-                    </td>
-                    <td class="Info" id="MMInfo" style="width: 50%"></td>
-                </tr>
-                <tr>
-                    <td><input type="password" id="QRMM" class="form-control input_text" placeholder="确认新密码"></td>
-                    <td class="Info" id="QRMMInfo" style="width: 50%"></td>
-                </tr>
-                <tr>
-                    <td><input type="button" class="btn btn-info input_text" id="btnThird" value="确定"/></td>
-                </tr>
-            </table>
         </div>
     </div>
 </div>
