--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/FWCZ.css" )" rel="stylesheet" />
 </head>
 <body style="width: 100%; height: 100%;">
     <div style="width: 1440px; text-align: center;">
@@ -36,7 +37,34 @@
             </table>
         </div>
         <div id="myTabContent" style="margin-left: 18%;">
-
+            <div id="divCZFS" class="divFWCZ" style="display: block; text-align: left">
+                <div class="divLeft">
+                    <span class="spanFWCZ">出租方式</span>
+                </div>
+                <div class="divRight">
+                    <img class="iFWCZ" id="imgZTCZ" /><label class="labelFWCZ">&nbsp;&nbsp;整套出租&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;单间出租</label>
+                </div>
+            </div>
+            <div id="divXQMC" class="divFWCZ" style="display: block; text-align: left">
+                <div class="divLeft">
+                    <span class="spanFWCZ">小区名称</span>
+                </div>
+                <div class="divRight">
+                    <input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入小区">
+                </div>
+            </div>
+            <div id="divFWLX" class="divFWCZ" style="display: block; text-align: left">
+                <div class="divLeft">
+                    <span class="spanFWCZ">房屋类型</span>
+                </div>
+                <div class="divRight">
+                    <span style="border: 1px solid #cccccc; width: 116px; height: 34px; border-radius: 4px;">
+                        <input style="width: 80px; border: none; height: 10px;" type="text" />
+                        <span style="color: #999;">室</span>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
