--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LBXZ/LBXZ.cshtml
@@ -10,8 +10,10 @@
     <meta name="viewport" content="width=device-width" />
     <title></title>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/LBXZ.js")"></script>
+    <link href="@Url.Content("~/Areas/Business/Css/LBXZ.css" )" rel="stylesheet" />
 </head>
-<body style="width: 100%; height: 100%;">
+
+><body style="width: 100%; height: 100%;">
 <div style="width: 1440px; text-align: center;">
     <div id="divLBHead" style="margin-left: 18%; margin-top: 20px;">
         <table class="table" style="width: 100%; text-align: center;">
