--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -59,10 +59,83 @@
                     <span class="spanFWCZ">房屋类型</span>
                 </div>
                 <div class="divRight">
-                    <span style="border: 1px solid #cccccc; width: 116px; height: 34px; border-radius: 4px;">
-                        <input style="width: 80px; border: none; height: 10px;" type="text" />
+                    <span class="spanFWLX">
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
                         <span style="color: #999;">室</span>
                     </span>
+                    <span class="spanFWLX">
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
+                        <span style="color: #999;">厅</span>
+                    </span>
+                    <span class="spanFWLX">
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
+                        <span style="color: #999;">卫</span>
+                    </span>
+                    <span class="spanFWLX" style="width: 198px">
+                        <span style="color: #999; margin-left: 8px">共</span>
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
+                        <span style="color: #999;">平（㎡）</span>
+                    </span>
+                </div>
+            </div>
+            <div id="divFWQK" class="divFWCZ" style="display: block; text-align: left">
+                <div class="divLeft">
+                    <span class="spanFWCZ">房屋情况</span>
+                </div>
+                <div class="divRight">
+                    <div class="spanFWLXOut">
+                        <div class="spanFWLXIn">
+                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">朝向</span>
+                            <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
+                        </div>
+                        <div id="divFWCX" class="divdropdown">
+                            <ul class="uldropdown" style="overflow-y: scroll;">
+                                <li class="lidropdown">请选择朝向</li>
+                                <li class="lidropdown">东</li>
+                                <li class="lidropdown">南</li>
+                                <li class="lidropdown">西</li>
+                                <li class="lidropdown">北</li>
+                                <li class="lidropdown">南北</li>
+                                <li class="lidropdown">东西</li>
+                                <li class="lidropdown">东南</li>
+                                <li class="lidropdown">西南</li>
+                                <li class="lidropdown">东北</li>
+                                <li class="lidropdown">西北</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="spanFWLXOut">
+                        <div class="spanFWLXIn">
+                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">装修情况</span>
+                            <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
+                        </div>
+                        <div id="divZXQK" class="divdropdown">
+                            <ul class="uldropdown">
+                                <li class="lidropdown">请选择装修情况</li>
+                                <li class="lidropdown">毛坯</li>
+                                <li class="lidropdown">简单装修</li>
+                                <li class="lidropdown">中等装修</li>
+                                <li class="lidropdown">精装修</li>
+                                <li class="lidropdown">豪华装修</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="spanFWLXOut">
+                        <div class="spanFWLXIn">
+                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">住宅类型</span>
+                            <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
+                        </div>
+                        <div id="divZZLX" class="divdropdown">
+                            <ul class="uldropdown">
+                                <li class="lidropdown">请选择住宅类型</li>
+                                <li class="lidropdown">普通住宅</li>
+                                <li class="lidropdown">商住两用</li>
+                                <li class="lidropdown">公寓</li>
+                                <li class="lidropdown">平房</li>
+                                <li class="lidropdown">别墅其它</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
