--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -12,7 +12,8 @@
     color: gray;
     text-align: right;
     margin-left: 100px;
-   display: inline
+    display: inline;
+    font-size: 14px;
 }
 
 .divRight {
@@ -22,6 +23,7 @@
 
 .labelFWCZ {
     font-weight: normal;
+    font-size: 14px;
 }
 
 .iFWCZ {
@@ -31,4 +33,60 @@
     /*background-position: -67px -57px;*/
     background-position: -67px -0px;
     cursor: pointer;
+}
+
+.spanFWLX {
+     border: 1px solid #cccccc; 
+     display: inline-block; 
+     width: 128px; 
+     height: 34px; 
+     border-radius: 4px;
+     font-size: 14px;
+}
+
+.spanFWLXOut {
+    display: inline-block; 
+         width: 128px; 
+     height: 34px; 
+}
+
+.spanFWLXIn {
+     border: 1px solid #cccccc; 
+     display: inline-block; 
+     width: 128px; 
+     height: 34px; 
+     border-radius: 4px;
+     font-size: 14px;
+}
+
+.divdropdown {
+    float: left;
+    width: 129px;
+}
+
+.uldropdown {
+    border-radius: 4px;
+    text-align: center;
+    width: 128px;
+    display: inline-block;
+    border-left: 1px solid #cccccc;
+    border-right: 1px solid #cccccc;
+    border-bottom: 1px solid #cccccc;
+    padding-left: 0px;
+    height: 205px;
+    /*overflow-y: scroll;*/
+}
+
+.lidropdown {
+    height: 34px;
+    text-align: left;
+    display: block;
+    padding-left: 6px;
+    line-height: 34px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.lidropdown:hover {
+    background: #ececec;
 }
