--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -6,6 +6,7 @@
     margin-left: 10px;
     margin-bottom: 10px;
     height: 50px;
+    z-index: 1;
 }
 
 .divLeft {
@@ -62,6 +63,7 @@
 .divdropdown {
     float: left;
     width: 129px;
+    z-index: 999;
 }
 
 .uldropdown {
