--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -78,12 +78,12 @@
                     </span>
                 </div>
             </div>
-            <div id="divFWQK" class="divFWCZ" style="display: block; text-align: left;">
+            <div id="divFWQK" class="divFWCZ" style="display: block; text-align: left; z-index: 999">
                 <div class="divLeft">
                     <span class="spanFWCZ">房屋情况</span>
                 </div>
                 <div class="divRight">
-                    <div class="spanFWLXOut" style="z-index: 999">
+                    <div class="spanFWLXOut">
                         <div id="divFWCXText" class="spanFWLXIn">
                             <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">朝向</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
@@ -91,7 +91,7 @@
                         <div id="divFWCX" class="divdropdown">
                         </div>
                     </div>
-                    <div class="spanFWLXOut" style="z-index: 998">
+                    <div class="spanFWLXOut">
                         <div id="divZXQKText" class="spanFWLXIn">
                             <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">装修情况</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
@@ -99,7 +99,7 @@
                         <div id="divZXQK" class="divdropdown">
                         </div>
                     </div>
-                    <div class="spanFWLXOut" style="z-index: 997">
+                    <div class="spanFWLXOut">
                         <div id="divZZLXText" class="spanFWLXIn">
                             <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">住宅类型</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
@@ -109,17 +109,17 @@
                     </div>
                 </div>
             </div>
-            <div id="divLCFB" class="divFWCZ" style="display: block; text-align: left;">
+            <div id="divLCFB" class="divFWCZ" style="display: block; text-align: left; z-index: 998">
                 <div class="divLeft">
                     <span class="spanFWCZ">楼层分布</span>
                 </div>
-                <div class="divRight" style="z-index: 500;">
-                    <span class="spanFWLX" style="width: 160px; z-index: 500;">
+                <div class="divRight" style="position: relative">
+                    <span class="spanFWLX" style="width: 160px;">
                         <span style="color: #999; margin-left: 8px">第</span>
                         <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
                         <span style="color: #999;">层</span>
                     </span>
-                    <span class="spanFWLX" style="width: 160px; ">
+                    <span class="spanFWLX" style="width: 160px;">
                         <span style="color: #999; margin-left: 8px">共</span>
                         <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
                         <span style="color: #999;">层</span>
