--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/FWCZ.css
@@ -6,7 +6,7 @@
     margin-left: 10px;
     margin-bottom: 10px;
     height: 50px;
-    z-index: 1;
+    position: relative;
 }
 
 .divLeft {
@@ -20,6 +20,7 @@
 .divRight {
     display: inline;
     margin-left: 30px;
+    position: relative;
 }
 
 .labelFWCZ {
@@ -30,40 +31,39 @@
 .iFWCZ {
     width: 16px;
     height: 16px;
-    background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/icon.png) ;
+    background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/icon.png);
     /*background-position: -67px -57px;*/
     background-position: -67px -0px;
     cursor: pointer;
 }
 
 .spanFWLX {
-     border: 1px solid #cccccc; 
-     display: inline-block; 
-     width: 128px; 
-     height: 34px; 
-     border-radius: 4px;
-     font-size: 14px;
+    border: 1px solid #cccccc;
+    display: inline-block;
+    width: 128px;
+    height: 34px;
+    border-radius: 4px;
+    font-size: 14px;
 }
 
 .spanFWLXOut {
-    display: inline-block; 
-         width: 128px; 
-     height: 34px; 
+    display: inline-block;
+    width: 128px;
+    height: 34px;
 }
 
 .spanFWLXIn {
-     border: 1px solid #cccccc; 
-     display: inline-block; 
-     width: 128px; 
-     height: 34px; 
-     border-radius: 4px;
-     font-size: 14px;
+    border: 1px solid #cccccc;
+    display: inline-block;
+    width: 128px;
+    height: 34px;
+    border-radius: 4px;
+    font-size: 14px;
 }
 
 .divdropdown {
     float: left;
     width: 129px;
-    z-index: 999;
 }
 
 .uldropdown {
@@ -87,8 +87,11 @@
     line-height: 34px;
     font-size: 14px;
     cursor: pointer;
+    color: #999999;
+    background: #FFFFFF;
 }
 
 .lidropdown:hover {
     background: #ececec;
+    color: #333333;
 }
