--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -126,6 +126,22 @@
                     </span>
                 </div>
             </div>
+            <div id="divFWZJ" class="divFWCZ" style="display: block; text-align: left; z-index: 998">
+                <div class="divLeft">
+                    <span class="spanFWCZ">租金</span>
+                </div>
+                <div class="divRight" style="position: relative">
+                    <span class="spanFWLX" style="width: 160px;">
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
+                        <span style="color: #999;">元/月</span>
+                    </span>
+                    <span class="spanFWLX" style="width: 160px;">
+                        <span style="color: #999; margin-left: 8px">共</span>
+                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
+                        <span style="color: #999;">层</span>
+                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
