--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/FWCZ.js")"></script>
     <link href="@Url.Content("~/Areas/Business/Css/FWCZ.css" )" rel="stylesheet" />
 </head>
-<body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100%; font-family: 微软雅黑">
     <div style="width: 1440px; text-align: center;">
         <div id="divLBHead" style="margin-left: 18%; margin-top: 20px;">
             <table class="table" style="width: 100%; text-align: center;">
@@ -36,9 +36,14 @@
                 </tr>
             </table>
         </div>
-        <div id="myTabContent" style="margin-left: 18%;">
-            <div id="divCZFS" class="divFWCZ" style="display: block; text-align: left">
+        <div id="myTabContent" style="margin-left: 18%; padding-bottom: 150px;">
+            <div id="divJBXX" class="divSplit" style="display: block; text-align: left">
+                <span class="spanSplit">基本信息</span>
+                <em class="emSplit"></em>
+            </div>
+            <div id="divCZFS" class="divFWCZ">
                 <div class="divLeft">
+                    <span class="required">*</span>
                     <span class="spanFWCZ">出租方式</span>
                 </div>
                 <div class="divRight">
@@ -46,16 +51,18 @@
                     <img class="iFWCZ" id="imgDJCZ" /><label class="labelFWCZ">&nbsp;&nbsp;单间出租</label>
                 </div>
             </div>
-            <div id="divXQMC" class="divFWCZ" style="display: block; text-align: left">
+            <div id="divXQMC" class="divFWCZ">
                 <div class="divLeft">
+                    <span class="required">*</span>
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="divRight">
-                    <input type="text" class="form-control input_text" id="YHM" column="YHM" placeholder="请输入小区">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称" />
                 </div>
             </div>
-            <div id="divFWLX" class="divFWCZ" style="display: block; text-align: left">
+            <div id="divFWLX" class="divFWCZ">
                 <div class="divLeft">
+                    <span class="required">*</span>
                     <span class="spanFWCZ">房屋类型</span>
                 </div>
                 <div class="divRight">
@@ -78,14 +85,15 @@
                     </span>
                 </div>
             </div>
-            <div id="divFWQK" class="divFWCZ" style="display: block; text-align: left; z-index: 999">
+            <div id="divFWQK" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft">
+                    <span class="required">*</span>
                     <span class="spanFWCZ">房屋情况</span>
                 </div>
                 <div class="divRight">
                     <div class="spanFWLXOut">
                         <div id="divFWCXText" class="spanFWLXIn">
-                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">朝向</span>
+                            <span id="spanFWCX" class="spanFWQK">朝向</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
                         </div>
                         <div id="divFWCX" class="divdropdown">
@@ -93,7 +101,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZXQKText" class="spanFWLXIn">
-                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">装修情况</span>
+                            <span id="spanZXQK" class="spanFWQK">装修情况</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
                         </div>
                         <div id="divZXQK" class="divdropdown">
@@ -101,7 +109,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZZLXText" class="spanFWLXIn">
-                            <span style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">住宅类型</span>
+                            <span id="spanZZLX" class="spanFWQK">住宅类型</span>
                             <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
                         </div>
                         <div id="divZZLX" class="divdropdown">
@@ -109,8 +117,9 @@
                     </div>
                 </div>
             </div>
-            <div id="divLCFB" class="divFWCZ" style="display: block; text-align: left; z-index: 998">
+            <div id="divLCFB" class="divFWCZ" style="z-index: 998">
                 <div class="divLeft">
+                    <span class="required">*</span>
                     <span class="spanFWCZ">楼层分布</span>
                 </div>
                 <div class="divRight" style="position: relative">
@@ -126,23 +135,141 @@
                     </span>
                 </div>
             </div>
-            <div id="divFWZJ" class="divFWCZ" style="display: block; text-align: left; z-index: 998">
+            <div id="divFWZJ" class="divFWCZ" style="z-index: 997">
                 <div class="divLeft">
-                    <span class="spanFWCZ">租金</span>
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">房屋租金</span>
                 </div>
                 <div class="divRight" style="position: relative">
                     <span class="spanFWLX" style="width: 160px;">
                         <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
                         <span style="color: #999;">元/月</span>
                     </span>
-                    <span class="spanFWLX" style="width: 160px;">
-                        <span style="color: #999; margin-left: 8px">共</span>
-                        <input style="width: 80px; margin-top: 1px; border: none; height: 30px; text-align: center; width: 100px" type="text" />
-                        <span style="color: #999;">层</span>
-                    </span>
+                    <div class="spanFWLXOut">
+                        <div id="divYFFSText" class="spanFWLXIn">
+                            <span id="spanYFFS" style="display: inline-block; width: 105px; height: 30px; text-align: center; margin-top: 4px;">押付方式</span>
+                            <div style="background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/arrow_down.png); width: 16px; height: 16px; display: inline-block; vertical-align: middle;"></div>
+                        </div>
+                        <div id="divYFFS" class="divdropdown">
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div id="divBHFY" class="divFWCZ" style="z-index: 994; height: 80px;">
+                <div class="divLeft">
+                    <span class="required"></span>
+                    <span id="spanBHFY">包含费用</span>
+                </div>
+                <div id="divBHFYText" class="divRight" style="position: relative">
+                </div>
+            </div>
+            <div id="divFWPZ" class="divFWCZ" style="z-index: 996">
+                <div class="divLeft">
+                    <span class="required"></span>
+                    <span id="spanFWCZ">房屋配置</span>
+                </div>
+                <div id="divFWPZText" class="divRight" style="position: relative">
+                </div>
+            </div>
+            <div id="divXXXX" class="divSplit" style="display: block; text-align: left; margin-top: 100px;">
+                <span class="spanSplit">详细信息</span>
+                <em class="emSplit"></em>
+            </div>
+            <div id="divFWLD" class="divFWCZ" style="z-index: 995; height: 80px;">
+                <div class="divLeft">
+                    <span class="required"></span>
+                    <span id="spanFWLD">房屋亮点</span>
+                </div>
+                <div id="divFWLDText" class="divRight" style="position: relative">
+                </div>
+            </div>
+            <div id="divCZYQ" class="divFWCZ" style="z-index: 994; height: 80px;">
+                <div class="divLeft">
+                    <span class="required"></span>
+                    <span id="spanCZYQ">出租要求</span>
+                </div>
+                <div id="divCZYQText" class="divRight" style="position: relative">
+                </div>
+            </div>
+            <div id="divKRZSJ" class="divFWCZ" style="margin-top: 18px;">
+                <div class="divLeft" style="margin-left: 86px;">
+                    <span class="required"></span>
+                    <span id="spanKRZSJ">可入住时间</span>
+                </div>
+                <div class="divRight">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入可入住时间" />
+                </div>
+            </div>
+            <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span id="spanFYBT">房源标题</span>
+                </div>
+                <div class="divRight">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
+                </div>
+            </div>
+            <div id="divFYMS" class="divFWCZ" style="height: 170px;">
+                <div class="divLeft" style="height: 170px; vertical-align: top;">
+                    <span class="required">*</span>
+                    <span id="spanFYMS">房源描述</span>
+                </div>
+                <div class="divRight">
+                    <textarea class="spanFWLX" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999" placeholder="请输入房源标题"></textarea>
+                </div>
+            </div>
+            <div id="divFWZP" class="divFWCZ">
+                <div class="divLeft" style="height: 170px; vertical-align: top;">
+                    <span class="required">*</span>
+                    <span id="spanFWZP">房屋照片</span>
+                </div>
+                <div class="divRight">
+                    <div id="divUploadOut" style="width: 195px; height: 145px; display: inline-block; border: 1px solid #cccccc; border-radius: 4px;">
+                        <div id="divUpload" style="width: 76px; height: 107px; margin-top: 20px; margin-left: 58.5px; background-image: url(http://localhost/XiaoZhen1Qu/Areas/Business/Css/images/upload_small2.png);">
+                            <input id="inputUpload" unselectable="on" type="file" multiple="multiple" style="margin-top: -20px; margin-left: -58.5px; float: left; width: 195px; height: 145px; opacity: 0; cursor: pointer;" />
+                        </div>
+                    </div>
+                    <div style="margin-left: 214px; font-size: 14px; color: #999999;">
+                        <span>最多8张，可多选上传，最大10mb。有图可使浏览量增加3倍，并会在推荐位显示。</span>
+                    </div>
+                </div>
+            </div>
+            <div id="divLXRXX" class="divSplit" style="display: block; text-align: left; margin-top: 140px;">
+                <span class="spanSplit">联系人信息</span>
+                <em class="emSplit"></em>
+            </div>
+            <div id="divLXDH" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 114px;">
+                    <span class="required">*</span>
+                    <span id="spanLXDH">联系人</span>
+                </div>
+                <div class="divRight">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入联系人" />
+                </div>
+            </div>
+            <div id="divLXDH" class="divFWCZ">
+                <div class="divLeft">
+                    <span class="required">*</span>
+                    <span id="spanLXDH">联系电话</span>
+                </div>
+                <div class="divRight">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入联系电话" />
+                </div>
+            </div>
+            <div id="divQQ" class="divFWCZ">
+                <div class="divLeft" style="margin-left: 133px;">
+                    <span class="required">*</span>
+                    <span id="spanQQ">QQ</span>
+                </div>
+                <div class="divRight">
+                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入QQ" />
+                </div>
+            </div>
+            <div id="divFB" class="divSplit" style="display: block; text-align: center; margin-top: 40px;">
+                <input type="button" class="btn btn-info input_text" style="height: 50px; font-size: 24px;" id="btnFB" value="发布" />
+            </div>
         </div>
+
     </div>
 </body>
 </html>
