--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -93,7 +93,7 @@
                 <div class="divRight">
                     <div class="spanFWLXOut">
                         <div id="divFWCXText" class="spanFWLXIn">
-                            <span id="spanFWCX" class="spanFWQK">朝向</span>
+                            <span id="spanFWCX" column="FWCX" class="spanFWQK">南北</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divFWCX" class="divdropdown">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZXQKText" class="spanFWLXIn">
-                            <span id="spanZXQK" class="spanFWQK">装修情况</span>
+                            <span id="spanZXQK" column="ZXQK" class="spanFWQK">简单装修</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divZXQK" class="divdropdown">
@@ -109,7 +109,7 @@
                     </div>
                     <div class="spanFWLXOut">
                         <div id="divZZLXText" class="spanFWLXIn">
-                            <span id="spanZZLX" class="spanFWQK">住宅类型</span>
+                            <span id="spanZZLX" column="ZZLX" class="spanFWQK">普通住宅</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divZZLX" class="divdropdown">
@@ -123,14 +123,14 @@
                     <span class="spanFWCZ">楼层分布</span>
                 </div>
                 <div class="divRight">
-                    <span class="spanFWLX" style="width: 160px;">
+                    <span class="spanFWLX">
                         <span class="spanFontColor" style=" margin-left: 8px">第</span>
-                        <input class="inputLCFB" type="text" />
+                        <input id="C" column="C" class="inputLCFB" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
-                    <span class="spanFWLX" style="width: 160px;">
+                    <span class="spanFWLX">
                         <span class="spanFontColor" style="margin-left: 8px">共</span>
-                        <input class="inputLCFB" type="text" />
+                        <input id="GJC" column="GJC" class="inputLCFB" type="text" style="width: 70px" />
                         <span class="spanFontColor">层</span>
                     </span>
                 </div>
@@ -141,13 +141,13 @@
                     <span class="spanFWCZ">房屋租金</span>
                 </div>
                 <div class="divRight">
-                    <span class="spanFWLX" style="width: 160px; display: inline-block;">
-                        <input class="inputLCFB" type="text" />
+                    <span class="spanFWLX" style=" display: inline-block;">
+                        <input id="FWZJ" column="FWZJ" class="inputLCFB" type="text" style="width: 78px" />
                         <span class="spanFontColor">元/月</span>
                     </span>
                     <div class="spanFWLXOut" style="border: 1px solid #cccccc; border-radius: 4px;">
                         <div id="divYFFSText" class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanYFFS" class="spanFWQK" style="margin-top: 0">押付方式</span>
+                            <span id="spanYFFS" column="YFFS" class="spanFWQK" style="margin-top: 0">押一付一</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divYFFS" class="divdropdown">
