--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -206,7 +206,7 @@
                     <span id="spanFYBT">房源标题</span>
                 </div>
                 <div class="divRight">
-                    <input class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
+                    <input column="FYBT" class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入房源标题" />
                 </div>
             </div>
             <div id="divFYMS" class="divFWCZ" style="height: 170px;">
@@ -215,7 +215,7 @@
                     <span id="spanFYMS">房源描述</span>
                 </div>
                 <div class="divRight">
-                    <textarea class="spanFWLX" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999" placeholder="请输入房源标题"></textarea>
+                    <textarea column="FYMS" class="spanFWLX" style="width: 594px; height: 170px; padding: 6px 12px; color: #999999" placeholder="请输入房源标题"></textarea>
                 </div>
             </div>
             <div id="divFWZP" class="divFWCZ">
@@ -244,7 +244,7 @@
                     <span id="spanLXDH">联系人</span>
                 </div>
                 <div class="divRight">
-                    <input class="spanFWLX inputLXRXX" type="text" placeholder="请输入联系人" />
+                    <input column="LXR" class="spanFWLX inputLXRXX" type="text" placeholder="请输入联系人" />
                 </div>
             </div>
             <div id="divLXDH" class="divFWCZ">
@@ -253,7 +253,7 @@
                     <span id="spanLXDH">联系电话</span>
                 </div>
                 <div class="divRight">
-                    <input class="spanFWLX inputLXRXX" type="text" placeholder="请输入联系电话" />
+                    <input column="LXDH" class="spanFWLX inputLXRXX" type="text" placeholder="请输入联系电话" />
                 </div>
             </div>
             <div id="divQQ" class="divFWCZ">
@@ -262,7 +262,7 @@
                     <span id="spanQQ">QQ</span>
                 </div>
                 <div class="divRight">
-                    <input class="spanFWLX inputLXRXX" type="text" placeholder="请输入QQ" />
+                    <input column="QQ" class="spanFWLX inputLXRXX" type="text" placeholder="请输入QQ" />
                 </div>
             </div>
             <div id="divFB" class="divSplit" style="display: block; text-align: center; margin-top: 40px;">
