--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FWCZ/FWCZ.cshtml
@@ -57,7 +57,7 @@
                     <span class="spanFWCZ">小区名称</span>
                 </div>
                 <div class="divRight">
-                    <input id="XZMC" column="XQMC" class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称" />
+                    <input id="XZMC" column="XQMC" class="spanFWLX" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="请输入小区名称"/>
                 </div>
             </div>
             <div id="divFWLX" class="divFWCZ">
@@ -93,7 +93,7 @@
                 <div class="divRight">
                     <div class="spanFWLXOut">
                         <div id="divFWCXText" class="spanFWLXIn">
-                            <span id="spanFWCX" column="FWCX" class="spanFWQK">南北</span>
+                            <span id="spanFWCX" column="CX" class="spanFWQK">南北</span>
                             <div class="divFWQKArrow"></div>
                         </div>
                         <div id="divFWCX" class="divdropdown">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="divRight">
                     <span class="spanFWLX" style=" display: inline-block;">
-                        <input id="FWZJ" column="FWZJ" class="inputLCFB" type="text" style="width: 78px" />
+                        <input id="FWZJ" column="ZJ" class="inputLCFB" type="text" style="width: 78px" />
                         <span class="spanFontColor">元/月</span>
                     </span>
                     <div class="spanFWLXOut" style="border: 1px solid #cccccc; border-radius: 4px;">
